--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <p>
           This <a href="https://medium.com/user-experience-researche/e6a1e37028b4">process post</a> reimagines the Dropbox Photos experience in a full design cycle: user research, to experience design, to UI prototyping. 
         </p>
-        <p>Featured in Fast.Co Design, Smashing Magazine, Sidebar.io, and Medium's Top 100. 
+        <p>Featured in <a href="www.fastcodesign.com/3035190/designers-at-facebook-dropbox-and-pinterest-on-how-to-build-a-world-class-portfolio">Fast.Co Design</a>, Smashing Magazine, Sidebar.io, and Medium's Top 100. 
         </p>
       </div>
 
@@ -126,9 +126,9 @@
         <h2>Dropbox's Core Features</h2>
         <h3>Research</h3>
         <p>
-          At Dropbox, I managed research for our Search, Sharing, and growth campaigns. I'd draft research plans based off of project hypothesis, execute the best methodology given the constraints and research goal, then translate the research to insights.
+          At Dropbox, I managed research for our Search, Sharing, and growth campaigns. I led research plans based on project hypotheses, execute the best methodology given the constraints and research goal, then translate the research to insights.
         </p>
-        <p>As a new team, we also worked on evangelizing research across the company. This <a href="https://www.dropbox.com/s/9br4t02eq6k3597/2014-10-06%2019.09.46.jpg?dl=0">artifact</a> I designed was the first in a series that showcased our team and product insights.
+        <p>As a new team, we also worked on evangelizing research across the company. This <a href="https://www.dropbox.com/s/ty27f9ie4cwv84w/2014-10-06%2019.09.46.jpg?dl=0">artifact</a> I designed was the first in a series that showcased our team and product insights.
         </p>
       </div>
 
@@ -143,12 +143,12 @@
       </div>
 
       <div class="section">
-        <h2>Twitch One-Pager</h2>
+        <h2>Twitch.TV One-Pager</h2>
         <h3>UX + Visual</h3>
         <p>
-          I consulted with the data science team of 4 to design a solution for their recruiting needs. After 2 weeks, we designed and launched a microsite specific to the team
+          I consulted with the data science team of 4 to design a solution for their recruiting needs. After 2 weeks, we designed and launched a microsite specific to the team.
         </p>
-        <p>It inspired other teams across the company to create their own microsites, and the data science team exceeded their hiring goals by 200%.
+        <p>The data science team exceeded their hiring goals by 200%, and its success inspired other teams across the company to create their own.
         </p>
       </div>
 
@@ -182,17 +182,17 @@
       <div class="section">
         <h2>Advising</h2>
         <p>
-          I've got an open ear to interesting causes, especially in the education space. I mentor at <a href="http://www.trydesignlab.com">DesignLab</a> (an online design course), in "Design 101" and "UX Research and Strategy".
+          Drop me a note about interesting causes, especially in the education and healthcare spaces. I mentor at <a href="http://www.trydesignlab.com">DesignLab</a> (an online design course), in visual fundamentals and UX methodology.
         </p>
       </div>
 
       <div class="section">
         <h2>Talks/Workshops</h2>
-        <h4>Sharing is a Springboard, Github 2014</h4>
+        <h4>Sharing is a Springboard, GitHub</h4>
         <h5>How I was hired from a blog post.</h5>
-        <h4>UX + Visual, <a href="http://thoughtbot.com/taco-tuesdays">Thoughtbot 2014</a></h4>
+        <h4>UX + Visual, <a href="http://thoughtbot.com/taco-tuesdays">thoughtbot</a></h4>
         <h5>My <a href="https://www.dropbox.com/s/0swduto3o809zde/ux-visual-process-thoughtbot.pdf?dl=0">research + design process</a>, and my favorite tools for it.</h5>
-        <h4>Quick and Dirty User Research, <a href="http://www.eventbrite.com/e/quick-dirty-user-research-tickets-14705457419?">Parisoma 2015</a></h4>
+        <h4>Quick and Dirty User Research, <a href="http://www.eventbrite.com/e/quick-dirty-user-research-tickets-14705457419?">PARISOMA</a></h4>
         <h5>The value of user research, and some ways you can inject lightweight research to your team.</h5>
       </div>
 
