--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <p>
           This <a href="https://medium.com/user-experience-researche/e6a1e37028b4">process post</a> reimagines the Dropbox Photos experience in a full design cycle: user research, to experience design, to UI prototyping. 
         </p>
-        <p>Featured in <a href="www.fastcodesign.com/3035190/designers-at-facebook-dropbox-and-pinterest-on-how-to-build-a-world-class-portfolio">Fast.Co Design</a>, Smashing Magazine, Sidebar.io, and Medium's Top 100. 
+        <p>Featured in <a href="https://www.fastcodesign.com/3035190/designers-at-facebook-dropbox-and-pinterest-on-how-to-build-a-world-class-portfolio">Fast.Co Design</a>, Smashing Magazine, Sidebar.io, and Medium's Top 100. 
         </p>
       </div>
 
@@ -200,6 +200,7 @@
         <p>francinelee.ivc@gmail.com</p>
         <p><a href="https://dribbble.com/francine">www.dribbble.com/francine<a></p>
         <p><a href="https://twitter.com/___fl">www.twitter.com/___fl</a></p>
+        <p><a href="http://v1.francine.io">v1</a></p>
       </div>
     </div>
   </div>
