--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
         <h2>Dropbox's Core Features</h2>
         <h3>Research</h3>
         <p>
-          At Dropbox, I managed research for our Search, Sharing, and growth campaigns. I led research plans based on project hypotheses, execute the best methodology given the constraints and research goal, then translate the research to insights.
-        </p>
-        <p>As a new team, we also worked on evangelizing research across the company. This <a href="https://www.dropbox.com/s/ty27f9ie4cwv84w/2014-10-06%2019.09.46.jpg?dl=0">artifact</a> I designed was the first in a series that showcased our team and product insights.
+          At Dropbox, I managed research for our Search, Sharing, and growth campaigns. I led research plans based on project hypotheses, executed the best methodology given the constraints and research goal, then translated the research to insights.
         </p>
       </div>
 
